syntax = "proto3";

package opendut.types.util;

message Url {
  string value = 1;
}

message Certificate {
  string tag = 1;
  bytes content = 2;
}

message Hostname {
  string value = 1;
}

message Port {
  uint32 value = 1;
}

message IpAddress {
  oneof address {
    IpV4Address ip_v4 = 1;
    IpV6Address ip_v6 = 2;
  }
}

message IpV4Address {
  bytes value = 1;
}

message IpV6Address {
  bytes value = 1;
}

message NetworkInterfaceName {
  string name = 1;
}

message EthernetInterfaceConfiguration {}

message CanInterfaceConfiguration {
  int32 bitrate = 1;
  int32 sample_point = 2;
  bool flexible_data_rate = 3;
  int32 data_bitrate = 4;
  int32 data_sample_point = 5;
}

message NetworkInterfaceDescriptor {
  NetworkInterfaceName name = 1;
  oneof configuration {
    EthernetInterfaceConfiguration ethernet = 2;
    CanInterfaceConfiguration can = 3;
  }
}

message AuthConfig {
  Url issuer_url = 1;
  ClientId client_id = 2;
  ClientSecret client_secret = 3;
  repeated OAuthScope scopes = 4;
}

message ClientId {
  string value = 1;
}

message ClientSecret {
  string value = 1;
}

message OAuthScope {
  string value = 1;
}
